fix: video player too close to query input form

--- a/app/components/panels/Youtube.module.css
+++ b/app/components/panels/Youtube.module.css
@@ -4,7 +4,7 @@
     display: flex;
     justify-content: center;
     align-items: center; 
-    margin: 0.5rem 0;
+    margin: 0.5rem 0 1rem;
 }
 
 .player_wrapper {
